<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_view_location">Open Map</string>
    <string name="action_share">Share</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="pref_category_weather_label">Weather Settings</string>

    <!--Key name for storing location in SharedPreferences [CHAR LIMIT=NONE]  -->
    <string name="pref_location_key">weather_location</string>
    <!--Label for the location preference [CHAR LIMIT=30] -->
    <string name="pref_location_label">Location</string>
    <!--Default Postal Code for the location preference [CHAR LIMIT=NONE]-->
    <string name="pref_location_default">Dublin, Ireland</string>

    <!--Key name for storing system of measurement in SharedPreferences [CHAR LIMIT=NONE]  -->
    <string name="pref_units_key">weather_units</string>
    <!--Label for the system of measurement preference [CHAR LIMIT=30] -->
    <string name="pref_units_label">Temperature Units</string>
    <!--Key name for the metric system of measurement in the preferences [CHAR LIMIT=NONE] -->
    <string name="pref_units_metric">metric</string>
    <!--Key name for the imperial system of measurement in the preferences [CHAR LIMIT=NONE] -->
    <string name="pref_units_imperial">imperial</string>
    <!--Label for the metric system of measurement in the UI [CHAR LIMIT=30] -->
    <string name="pref_units_label_metric">Metric</string>
    <!--Label for the imperial system of measurement in the UI [CHAR LIMIT=30] -->
    <string name="pref_units_label_imperial">Imperial</string>
</resources>
