<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory android:title="@string/pref_category_weather_label">
        <EditTextPreference
            android:defaultValue="@string/pref_location_default"
            android:inputType="text"
            android:key="@string/pref_location_key"
            android:singleLine="true"
            android:title="@string/pref_location_label" />

        <ListPreference
            android:defaultValue="@string/pref_units_metric"
            android:entries="@array/pref_weather_units_entries"
            android:entryValues="@array/pref_weather_units_values"
            android:key="@string/pref_units_key"
            android:summary="%s"
            android:title="@string/pref_units_label" />
    </PreferenceCategory>
</PreferenceScreen>